# vacancy_selection

./: README.md  config.py  pyproject.toml
src/: api_requests.py  api_service.py  file_worker.py  main.py  utils.py  vacancies.py
tests/: conftest.py  test_api_service.py  test_file_worker.py  test_utils.py  test_vacancies.py
